--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
               <a class="nav-link" href="#contact">ติดต่อเรา</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                target="_blank"
-                href="https://www.arawanbet.com/registernetwork/user/bjNCSmZudXJMUGsvSzVBeEpiNVNQZz09"
+              <a class="nav-link" target="_blank" href="https://bit.ly/33IciEQ"
                 >สมัครสมาชิก</a
               >
             </li>
@@ -116,7 +113,7 @@
             </div>
             <a
               class="btn btn-primary btn-xl text-uppercase"
-              href="https://www.arawanbet.com/registernetwork/user/bjNCSmZudXJMUGsvSzVBeEpiNVNQZz09"
+              href="https://bit.ly/33IciEQ"
               target="_blank"
               >สมัครสมาชิก</a
             >
@@ -754,8 +751,8 @@
             <div class="team-member">
               <img class="mx-auto" src="assets/img/lineimage.jpg" alt="..." />
               <h4>
-                <a href="https://lin.ee/m8fq6wf" target="_blank"
-                  >https://lin.ee/m8fq6wf</a
+                <a href="https://line.me/R/ti/p/@255xaffz" target="_blank"
+                  >https://line.me/R/ti/p/@255xaffz</a
                 >
               </h4>
             </div>
@@ -951,7 +948,10 @@
                       >สมัครผ่านลิงค์แอดมิน รับเพิ่ม 5% ของยอดฝากแรก ทุกวัน
                       สูงสุด 500 บาท และโปรโมชั่นอื่นๆอีกมากมาย </span
                     ><br />
-                    <span>สอบถาม Line: @225xaffz </span>
+                    <span
+                      >สอบถาม Line:
+                      <a href="https://line.me/R/ti/p/@255xaffz">ARAWANLOTTO</a>
+                    </span>
                   </p>
                 </div>
               </div>
